syntax = "proto3";
package virtengine.enclave.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "virtengine/enclave/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/enclave/v1";

// Query defines the gRPC querier service for the enclave module
service Query {
  // EnclaveIdentity queries an enclave identity for a validator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc EnclaveIdentity(QueryEnclaveIdentityRequest) returns (QueryEnclaveIdentityResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/identity/{validator_address}";
  }

  // ActiveValidatorEnclaveKeys queries all active validator enclave keys
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc ActiveValidatorEnclaveKeys(QueryActiveValidatorEnclaveKeysRequest) returns (QueryActiveValidatorEnclaveKeysResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/active_keys";
  }

  // CommitteeEnclaveKeys queries committee enclave keys for an epoch
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc CommitteeEnclaveKeys(QueryCommitteeEnclaveKeysRequest) returns (QueryCommitteeEnclaveKeysResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/committee_keys";
  }

  // MeasurementAllowlist queries the measurement allowlist
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc MeasurementAllowlist(QueryMeasurementAllowlistRequest) returns (QueryMeasurementAllowlistResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/measurements";
  }

  // Measurement queries a specific measurement
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Measurement(QueryMeasurementRequest) returns (QueryMeasurementResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/measurement/{measurement_hash}";
  }

  // KeyRotation queries key rotation status for a validator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc KeyRotation(QueryKeyRotationRequest) returns (QueryKeyRotationResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/rotation/{validator_address}";
  }

  // ValidKeySet queries the current valid key set
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc ValidKeySet(QueryValidKeySetRequest) returns (QueryValidKeySetResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/valid_keys";
  }

  // Params queries the module parameters
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/params";
  }

  // AttestedResult queries an attested scoring result
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc AttestedResult(QueryAttestedResultRequest) returns (QueryAttestedResultResponse) {
    option (google.api.http).get = "/virtengine/enclave/v1/attested_result/{block_height}/{scope_id}";
  }
}

// QueryEnclaveIdentityRequest is the request for QueryEnclaveIdentity
message QueryEnclaveIdentityRequest {
  // ValidatorAddress is the validator address to query
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// QueryEnclaveIdentityResponse is the response for QueryEnclaveIdentity
message QueryEnclaveIdentityResponse {
  // Identity is the enclave identity for the validator
  EnclaveIdentity identity = 1 [
    (gogoproto.jsontag) = "identity,omitempty",
    (gogoproto.moretags) = "yaml:\"identity\""
  ];
}

// QueryActiveValidatorEnclaveKeysRequest is the request for QueryActiveValidatorEnclaveKeys
message QueryActiveValidatorEnclaveKeysRequest {
  // Pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 1 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryActiveValidatorEnclaveKeysResponse is the response for QueryActiveValidatorEnclaveKeys
message QueryActiveValidatorEnclaveKeysResponse {
  // Identities are the active enclave identities
  repeated EnclaveIdentity identities = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "identities",
    (gogoproto.moretags) = "yaml:\"identities\""
  ];

  // Pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryCommitteeEnclaveKeysRequest is the request for QueryCommitteeEnclaveKeys
message QueryCommitteeEnclaveKeysRequest {
  // CommitteeEpoch is the epoch for which to get committee keys
  uint64 committee_epoch = 1 [
    (gogoproto.jsontag) = "committee_epoch,omitempty",
    (gogoproto.moretags) = "yaml:\"committee_epoch\""
  ];
}

// QueryCommitteeEnclaveKeysResponse is the response for QueryCommitteeEnclaveKeys
message QueryCommitteeEnclaveKeysResponse {
  // Identities are the committee enclave identities
  repeated EnclaveIdentity identities = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "identities",
    (gogoproto.moretags) = "yaml:\"identities\""
  ];
}

// QueryMeasurementAllowlistRequest is the request for QueryMeasurementAllowlist
message QueryMeasurementAllowlistRequest {
  // TEEType optionally filters by TEE type
  string tee_type = 1 [
    (gogoproto.jsontag) = "tee_type,omitempty",
    (gogoproto.moretags) = "yaml:\"tee_type\""
  ];

  // IncludeRevoked optionally includes revoked measurements
  bool include_revoked = 2 [
    (gogoproto.jsontag) = "include_revoked,omitempty",
    (gogoproto.moretags) = "yaml:\"include_revoked\""
  ];

  // Pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 3 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryMeasurementAllowlistResponse is the response for QueryMeasurementAllowlist
message QueryMeasurementAllowlistResponse {
  // Measurements are the measurement records
  repeated MeasurementRecord measurements = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "measurements",
    (gogoproto.moretags) = "yaml:\"measurements\""
  ];

  // Pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryMeasurementRequest is the request for QueryMeasurement
message QueryMeasurementRequest {
  // MeasurementHash is the hex-encoded measurement hash to query
  string measurement_hash = 1 [
    (gogoproto.jsontag) = "measurement_hash",
    (gogoproto.moretags) = "yaml:\"measurement_hash\""
  ];
}

// QueryMeasurementResponse is the response for QueryMeasurement
message QueryMeasurementResponse {
  // Measurement is the measurement record
  MeasurementRecord measurement = 1 [
    (gogoproto.jsontag) = "measurement,omitempty",
    (gogoproto.moretags) = "yaml:\"measurement\""
  ];

  // IsAllowed indicates if the measurement is currently allowed
  bool is_allowed = 2 [
    (gogoproto.jsontag) = "is_allowed",
    (gogoproto.moretags) = "yaml:\"is_allowed\""
  ];
}

// QueryKeyRotationRequest is the request for QueryKeyRotation
message QueryKeyRotationRequest {
  // ValidatorAddress is the validator address to query
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// QueryKeyRotationResponse is the response for QueryKeyRotation
message QueryKeyRotationResponse {
  // Rotation is the key rotation record
  KeyRotationRecord rotation = 1 [
    (gogoproto.jsontag) = "rotation,omitempty",
    (gogoproto.moretags) = "yaml:\"rotation\""
  ];

  // HasActiveRotation indicates if there is an active rotation
  bool has_active_rotation = 2 [
    (gogoproto.jsontag) = "has_active_rotation",
    (gogoproto.moretags) = "yaml:\"has_active_rotation\""
  ];
}

// QueryValidKeySetRequest is the request for QueryValidKeySet
message QueryValidKeySetRequest {
  // ForBlockHeight is the block height to check validity for
  int64 for_block_height = 1 [
    (gogoproto.jsontag) = "for_block_height,omitempty",
    (gogoproto.moretags) = "yaml:\"for_block_height\""
  ];

  // Pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryValidKeySetResponse is the response for QueryValidKeySet
message QueryValidKeySetResponse {
  // ValidatorKeys are the valid validator key infos
  repeated ValidatorKeyInfo validator_keys = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "validator_keys",
    (gogoproto.moretags) = "yaml:\"validator_keys\""
  ];

  // TotalCount is the total number of valid keys
  int32 total_count = 2 [
    (gogoproto.jsontag) = "total_count",
    (gogoproto.moretags) = "yaml:\"total_count\""
  ];

  // Pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 3 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryParamsRequest is the request for QueryParams
message QueryParamsRequest {}

// QueryParamsResponse is the response for QueryParams
message QueryParamsResponse {
  // Params are the module parameters
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// QueryAttestedResultRequest is the request for QueryAttestedResult
message QueryAttestedResultRequest {
  // BlockHeight is the block height of the result
  int64 block_height = 1 [
    (gogoproto.jsontag) = "block_height",
    (gogoproto.moretags) = "yaml:\"block_height\""
  ];

  // ScopeID is the scope ID of the result
  string scope_id = 2 [
    (gogoproto.jsontag) = "scope_id",
    (gogoproto.moretags) = "yaml:\"scope_id\""
  ];
}

// QueryAttestedResultResponse is the response for QueryAttestedResult
message QueryAttestedResultResponse {
  // Result is the attested scoring result
  AttestedScoringResult result = 1 [
    (gogoproto.jsontag) = "result,omitempty",
    (gogoproto.moretags) = "yaml:\"result\""
  ];
}
